--- a/views/index.ejs
+++ b/views/index.ejs
@@ -32,9 +32,9 @@
 			<div ng-show="thread.attach.length" class="post-images">
 				<figure ng-repeat="attach in thread.attach" class="post-figure">
 					<figcaption>
-						<a href="/uploads/{{attach}}">{{attach}}</a>
+						<a href="/uploads/{{attach.image}}">{{attach.image}}</a>
 					</figcaption>
-					<img ng-src="/uploads/s{{attach.split('.')[0]}}.png" src=""></img>
+					<img ng-src="/uploads/{{attach.preview}}" src=""></img>
 				</figure>
 			</div>
 			<div class="post-body"> {{thread.body}} </div>
@@ -64,9 +64,9 @@
 			<div ng-show="post.attach.length" class="post-images">
 				<figure ng-repeat="attach in post.attach" class="post-figure">
 					<figcaption>
-						<a href="/uploads/{{attach}}">{{attach}}</a>
+						<a href="/uploads/{{attach.image}}">{{attach}}</a>
 					</figcaption>
-					<img ng-src="/uploads/s{{attach.split('.')[0]}}.png" src=""></img>
+					<img ng-src="/uploads/{{attach.preview}}" src=""></img>
 				</figure>
 			</div>
 			<div class="post-body"> {{post.body}} </div>
